--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -103,3 +103,19 @@ body {
     display: inline-block;
     border-radius: 50%;
 }
+
+.glyphicon.glyphicon-plus{
+    font-size: 20px;
+}
+
+.glyphicon.glyphicon-ok{
+    font-size: 20px;
+}
+
+.glyphicon.glyphicon-remove{
+    font-size: 20px;
+}
+
+.glyphicon.glyphicon-pencil{
+    font-size: 20px;
+}
