added some experiment on bootstrap basics

--- a/public/experiments/bootstrap/css/style.css
+++ b/public/experiments/bootstrap/css/style.css
@@ -65,3 +65,10 @@
     /*color: white;*/
     /*text-align: center;*/
 /*}*/
+
+#p1{
+    background-color: #8a6d3b;
+}
+#p2{
+    background-color: #5e5e5e;
+}
