--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -12,7 +12,7 @@
 
 .glyphicon.glyphicon-plus {
     font-size: 20px;
-    color: green;
+    color: #5cb85c;
 }
 
 .pad-left{
@@ -25,7 +25,7 @@
 
 .glyphicon.glyphicon-remove {
     font-size: 20px;
-    color: red;
+    color: #d9534f;
 }
 
 .glyphicon.glyphicon-pencil {
@@ -35,6 +35,7 @@
 
 .glyphicon.glyphicon-align-justify{
     font-size: 20px;
+    color: #337ab7;
 }
 
 .edit-icon-lt {
