--- a/public/assignment/views/forms/forms.view.html
+++ b/public/assignment/views/forms/forms.view.html
@@ -9,8 +9,8 @@
     <!-- Minified CSS through CDN-->
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/dashboard.css">
-    <link rel = "stylesheet" href = "css/style.css">
+    <link rel="stylesheet" href="../../css/dashboard.css">
+    <link rel = "stylesheet" href = "../../css/style.css">
 
     <title>Web Development CS5610 Spring 2016-Assignment Forms Page</title>
 </head>
@@ -25,18 +25,18 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="home.html">Form Maker</a>
+            <a class="navbar-brand" href="../home/home.view.html">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <!--<li><a href="register.html">Register</a></li>-->
-                <!--<li><a href="login.html">Login</a></li>-->
+                <!--<li><a href="register.view.html">Register</a></li>-->
+                <!--<li><a href="login.view.html">Login</a></li>-->
                 <li><a href="#">Username</a></li>
                 <li><a href="#">Logout</a></li>
-                <li class="visible-xs"><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
-                <li class="visible-xs"><a href="profile.html">profile</a></li>
-                <li class="visible-xs"><a href="admin.html">Admin</a></li>
-                <li class="active visible-xs"><a href="forms.html">Forms</a></li>
+                <li class="visible-xs"><a href="../home/home.view.html">Home <span class="sr-only">(current)</span></a></li>
+                <li class="visible-xs"><a href="../users/profile.view.html">profile</a></li>
+                <li class="visible-xs"><a href="../admin/admin.view.html">Admin</a></li>
+                <li class="active visible-xs"><a href="forms.view.html">Forms</a></li>
             </ul>
             <!--<form class="navbar-form navbar-right">-->
             <!--<input type="text" class="form-control" placeholder="Search...">-->
@@ -49,18 +49,18 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
-                <li><a href="profile.html">profile</a></li>
-                <li><a href="admin.html">Admin</a></li>
-                <li class="active"><a href="forms.html">Forms</a></li>
+                <li><a href="../home/home.view.html">Home <span class="sr-only">(current)</span></a></li>
+                <li><a href="../users/profile.view.html">profile</a></li>
+                <li><a href="../admin/admin.view.html">Admin</a></li>
+                <li class="active"><a href="forms.view.html">Forms</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Forms</h1>
 
             <ul class="nav nav-tabs">
-                <li role="presentation" class="active"><a href="forms.html">Forms</a></li>
-                <li role="presentation"><a href="form-fields.html">Fields</a></li>
+                <li role="presentation" class="active"><a href="forms.view.html">Forms</a></li>
+                <li role="presentation"><a href="form-fields.view.html">Fields</a></li>
             </ul>
 
             <div class="table-responsive">
@@ -83,7 +83,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td><a href="form-fields.html">Registration Form</a></td>
+                        <td><a href="form-fields.view.html">Registration Form</a></td>
                         <td>
                             <a href="#">
                                 <span class="edit-icon-lt glyphicon glyphicon-remove" aria-hidden="true"></span>
@@ -94,7 +94,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td><a href="form-fields.html">Contact List</a></td>
+                        <td><a href="form-fields.view.html">Contact List</a></td>
                         <td>
                             <a href="#">
                                 <span class="edit-icon-lt glyphicon glyphicon-remove" aria-hidden="true"></span>
@@ -105,7 +105,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td><a href="form-fields.html">To Do List</a></td>
+                        <td><a href="form-fields.view.html">To Do List</a></td>
                         <td>
                             <a href="#">
                                 <span class="edit-icon-lt glyphicon glyphicon-remove" aria-hidden="true"></span>
@@ -129,6 +129,6 @@
 
 <!-- Minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src = "js/script.js"></script>
+<script src = "../../js/script.js"></script>
 </body>
 </html>
