--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -80,6 +80,9 @@ body {
 /*body {*/
     /*padding-top: 70px; !* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. *!*/
 /*}*/
+.top-margin{
+    margin-top: 5px;
+}
 
 .portfolio-item {
     margin-bottom: 25px;
