implemented sidebar using angular for FormBuilder App

--- a/public/assignment/views/header/header.view.html
+++ b/public/assignment/views/header/header.view.html
@@ -12,8 +12,10 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li ng-class="{'active': $location.url() == '/register'}"><a href="#/register">Register</a></li>
-                <li ng-class="{'active': $location.url() == '/login'}"><a href="#/login">Login</a></li>
+                <li ng-hide="location.url() == '/profile' || location.url() == '/forms' || location.url() == '/admin'"
+                    ng-class="{'active': $location.url() == '/register'}"><a href="#/register">Register</a></li>
+                <li ng-hide="location.url() == '/profile' || location.url() == '/forms' || location.url() == '/admin'"
+                    ng-class="{'active': $location.url() == '/login'}"><a href="#/login">Login</a></li>
                 <li><a href="#">Username</a></li>
                 <li><a href="#">Logout</a></li>
                 <li class="visible-xs" ng-class="{'active': $location.url() == '/home'}">
@@ -22,7 +24,7 @@
                     <a href="#/profile">profile</a></li>
                 <li class="visible-xs" ng-class="{'active': $location.url() == '/admin'}">
                     <a href="#/admin">Admin</a></li>
-                <!--<li class="visible-xs"><a href="../forms/forms.view.html">Forms</a></li>-->
+                <li class="visible-xs"><a href="#/forms">Forms</a></li>
             </ul>
         </div>
     </div>
