--- a/public/assignment/views/admin/admin.view.html
+++ b/public/assignment/views/admin/admin.view.html
@@ -1,61 +1,61 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <!-- IE Edge Meta Tag -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Viewport : This is for the display on smaller devices such as mobile, tab etc.-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!-- Minified CSS through CDN-->
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../css/dashboard.css">
-    <link rel="stylesheet" href="../../css/style.css">
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+    <!--<meta charset="UTF-8">-->
+    <!--&lt;!&ndash; IE Edge Meta Tag &ndash;&gt;-->
+    <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
+    <!--&lt;!&ndash; Viewport : This is for the display on smaller devices such as mobile, tab etc.&ndash;&gt;-->
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">-->
+    <!--&lt;!&ndash; Minified CSS through CDN&ndash;&gt;-->
+    <!--&lt;!&ndash; The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags &ndash;&gt;-->
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
+    <!--<link rel="stylesheet" href="../../css/dashboard.css">-->
+    <!--<link rel="stylesheet" href="../../css/style.css">-->
 
-    <title>Web Development CS5610 Spring 2016-Assignment Admin Page</title>
-</head>
-<body>
+    <!--<title>Web Development CS5610 Spring 2016-Assignment Admin Page</title>-->
+<!--</head>-->
+<!--<body>-->
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="../home/home.view.html">Form Maker</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <!--<li><a href="register.view.html">Register</a></li>-->
-                <!--<li><a href="login.view.html">Login</a></li>-->
-                <li><a href="#">Username</a></li>
-                <li><a href="#">Logout</a></li>
-                <li class="visible-xs"><a href="../home/home.view.html">Home <span class="sr-only">(current)</span></a></li>
-                <li class="visible-xs"><a href="../users/profile.view.html">profile</a></li>
-                <li class="active visible-xs"><a href="admin.view.html">Admin</a></li>
-                <li class="visible-xs"><a href="../forms/forms.view.html">Forms</a></li>
-            </ul>
-            <!--<form class="navbar-form navbar-right">-->
-            <!--<input type="text" class="form-control" placeholder="Search...">-->
-            <!--</form>-->
-        </div>
-    </div>
-</nav>
+<!--<nav class="navbar navbar-inverse navbar-fixed-top">-->
+    <!--<div class="container-fluid">-->
+        <!--<div class="navbar-header">-->
+            <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"-->
+                    <!--aria-expanded="false" aria-controls="navbar">-->
+                <!--<span class="sr-only">Toggle navigation</span>-->
+                <!--<span class="icon-bar"></span>-->
+                <!--<span class="icon-bar"></span>-->
+                <!--<span class="icon-bar"></span>-->
+            <!--</button>-->
+            <!--<a class="navbar-brand" href="../home/home.view.html">Form Maker</a>-->
+        <!--</div>-->
+        <!--<div id="navbar" class="navbar-collapse collapse">-->
+            <!--<ul class="nav navbar-nav navbar-right">-->
+                <!--&lt;!&ndash;<li><a href="register.view.html">Register</a></li>&ndash;&gt;-->
+                <!--&lt;!&ndash;<li><a href="login.view.html">Login</a></li>&ndash;&gt;-->
+                <!--<li><a href="#">Username</a></li>-->
+                <!--<li><a href="#">Logout</a></li>-->
+                <!--<li class="visible-xs"><a href="../home/home.view.html">Home <span class="sr-only">(current)</span></a></li>-->
+                <!--<li class="visible-xs"><a href="../users/profile.view.html">profile</a></li>-->
+                <!--<li class="active visible-xs"><a href="admin.view.html">Admin</a></li>-->
+                <!--<li class="visible-xs"><a href="../forms/forms.view.html">Forms</a></li>-->
+            <!--</ul>-->
+            <!--&lt;!&ndash;<form class="navbar-form navbar-right">&ndash;&gt;-->
+            <!--&lt;!&ndash;<input type="text" class="form-control" placeholder="Search...">&ndash;&gt;-->
+            <!--&lt;!&ndash;</form>&ndash;&gt;-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</nav>-->
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
-            <ul class="nav nav-sidebar">
-                <li><a href="../home/home.view.html">Home <span class="sr-only">(current)</span></a></li>
-                <li><a href="../users/profile.view.html">profile</a></li>
-                <li class="active"><a href="#">Admin</a></li>
-                <li><a href="../forms/forms.view.html">Forms</a></li>
-            </ul>
-        </div>
+        <!--<div class="col-sm-3 col-md-2 sidebar">-->
+            <!--<ul class="nav nav-sidebar">-->
+                <!--<li><a href="../home/home.view.html">Home <span class="sr-only">(current)</span></a></li>-->
+                <!--<li><a href="../users/profile.view.html">profile</a></li>-->
+                <!--<li class="active"><a href="#">Admin</a></li>-->
+                <!--<li><a href="../forms/forms.view.html">Forms</a></li>-->
+            <!--</ul>-->
+        <!--</div>-->
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Admin</h1>
             <h3 class="page-header">Users</h3>
@@ -132,13 +132,13 @@
 </div>
 
 
-<!-- FOOTER SECTION - Before closing </body> tag -->
+<!--&lt;!&ndash; FOOTER SECTION - Before closing </body> tag &ndash;&gt;-->
 
-<!-- jQuery -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!--&lt;!&ndash; jQuery &ndash;&gt;-->
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
 
-<!-- Minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src="../../js/script.js"></script>
-</body>
-</html>
+<!--&lt;!&ndash; Minified JavaScript &ndash;&gt;-->
+<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>-->
+<!--<script src="../../js/script.js"></script>-->
+<!--</body>-->
+<!--</html>-->
