--- a/public/assignment/views/forms/forms.view.html
+++ b/public/assignment/views/forms/forms.view.html
@@ -59,8 +59,8 @@
             <h1 class="page-header">Forms</h1>
 
             <ul class="nav nav-tabs">
-                <li role="presentation" class="active"><a href="forms.view.html">Forms</a></li>
-                <li role="presentation"><a href="form-fields.view.html">Fields</a></li>
+                <li role="presentation" class="active"><a href="#/forms">Forms</a></li>
+                <li role="presentation"><a href="#/">Fields</a></li>
             </ul>
 
             <div class="table-responsive">
