--- a/public/assignment/views/header/header.view.html
+++ b/public/assignment/views/header/header.view.html
@@ -13,16 +13,16 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li ng-hide="location.url() == '/profile' || location.url() == '/forms' || location.url() == '/admin'"
-                    ng-class="{'active': $location.url() == '/register'}"><a href="#/register">Register</a></li>
+                    ng-class="{'active': location.url() == '/register'}"><a href="#/register">Register</a></li>
                 <li ng-hide="location.url() == '/profile' || location.url() == '/forms' || location.url() == '/admin'"
-                    ng-class="{'active': $location.url() == '/login'}"><a href="#/login">Login</a></li>
+                    ng-class="{'active': location.url() == '/login'}"><a href="#/login">Login</a></li>
                 <li><a href="#">Username</a></li>
                 <li><a href="#">Logout</a></li>
-                <li class="visible-xs" ng-class="{'active': $location.url() == '/home'}">
+                <li class="visible-xs" ng-class="{'active': location.url() == '/home'}">
                     <a href="#/home">Home <span class="sr-only">(current)</span></a></li>
-                <li class="visible-xs" ng-class="{'active': $location.url() == '/profile'}">
+                <li class="visible-xs" ng-class="{'active': location.url() == '/profile'}">
                     <a href="#/profile">profile</a></li>
-                <li class="visible-xs" ng-class="{'active': $location.url() == '/admin'}">
+                <li class="visible-xs" ng-class="{'active': location.url() == '/admin'}">
                     <a href="#/admin">Admin</a></li>
                 <li class="visible-xs"><a href="#/forms">Forms</a></li>
             </ul>
