--- a/public/assignment/views/users/register.view.html
+++ b/public/assignment/views/users/register.view.html
@@ -6,30 +6,30 @@
                 <div class="form-group">
                     <label for="username" class="col-sm-2">Username:</label>
                     <div class="col-sm-10">
-                        <input type="text" ng-model="username" class="form-control" id="username" placeholder="Username">
+                        <input type="text" ng-model="user.username" class="form-control" id="username" placeholder="Username">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="password" class="col-sm-2">Password:</label>
                     <div class="col-sm-10">
-                        <input type="password" ng-model="password" class="form-control" id="password" placeholder="Password">
+                        <input type="password" ng-model="user.password" class="form-control" id="password" placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="verify_pswd" class="col-sm-2">Verify Password:</label>
                     <div class="col-sm-10">
-                        <input type="password" ng-model="vpassword" class="form-control" id="verify_pswd" placeholder="Password">
+                        <input type="password" ng-model="user.vpassword" class="form-control" id="verify_pswd" placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="email" class="col-sm-2">Email:</label>
                     <div class="col-sm-10">
-                        <input type="text" ng-model="emailId" class="form-control" id="email" placeholder="Email">
+                        <input type="text" ng-model="user.emailId" class="form-control" id="email" placeholder="Email">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <a href="#/profile" ng-click="register(username, password, vpassword, emailId)" class="btn btn-primary btn-block">Register</a>
+                        <a ng-click="register(user)" class="btn btn-primary btn-block">Register</a>
                         <!--<button type="submit" class="btn btn-default btn-block">Register</button>-->
                     </div>
 
