--- a/public/assignment/views/users/login.view.html
+++ b/public/assignment/views/users/login.view.html
@@ -1,80 +1,23 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-    <!--<meta charset="UTF-8">-->
-    <!--&lt;!&ndash; IE Edge Meta Tag &ndash;&gt;-->
-    <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
-    <!--&lt;!&ndash; Viewport : This is for the display on smaller devices such as mobile, tab etc.&ndash;&gt;-->
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">-->
-    <!--&lt;!&ndash; Minified CSS through CDN&ndash;&gt;-->
-    <!--&lt;!&ndash; The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags &ndash;&gt;-->
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
-    <!--<link rel="stylesheet" href="../../css/dashboard.css">-->
-    <!--<link rel = "stylesheet" href = "../../css/style.css">-->
-
-    <!--<title>Web Development CS5610 Spring 2016-Assignment Login Page</title>-->
-<!--</head>-->
-<!--<body>-->
-
-<!--<nav class="navbar navbar-inverse navbar-fixed-top">-->
-    <!--<div class="container-fluid">-->
-        <!--<div class="navbar-header">-->
-            <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"-->
-                    <!--aria-expanded="false" aria-controls="navbar">-->
-                <!--<span class="sr-only">Toggle navigation</span>-->
-                <!--<span class="icon-bar"></span>-->
-                <!--<span class="icon-bar"></span>-->
-                <!--<span class="icon-bar"></span>-->
-            <!--</button>-->
-            <!--<a class="navbar-brand" href="../home/home.view.html">Form Maker</a>-->
-        <!--</div>-->
-        <!--<div id="navbar" class="navbar-collapse collapse">-->
-            <!--<ul class="nav navbar-nav navbar-right">-->
-                <!--<li><a href="register.view.html">Register</a></li>-->
-                <!--<li class="active"><a href="login.view.html">Login</a></li>-->
-                <!--<li><a href="#">Username</a></li>-->
-                <!--<li><a href="#">Logout</a></li>-->
-                <!--<li class="visible-xs"><a href="../home/home.view.html">Home <span class="sr-only">(current)</span></a></li>-->
-                <!--<li class="visible-xs"><a href="profile.view.html">profile</a></li>-->
-                <!--<li class="visible-xs"><a href="../admin/admin.view.html">Admin</a></li>-->
-                <!--<li class="visible-xs"><a href="../forms/forms.view.html">Forms</a></li>-->
-            <!--</ul>-->
-            <!--&lt;!&ndash;<form class="navbar-form navbar-right">&ndash;&gt;-->
-            <!--&lt;!&ndash;<input type="text" class="form-control" placeholder="Search...">&ndash;&gt;-->
-            <!--&lt;!&ndash;</form>&ndash;&gt;-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</nav>-->
-
-<div class="container-fluid">
+<div class="container-fluid" ng-controller="LoginController">
     <div class="row">
-        <!--<div class="col-sm-3 col-md-2 sidebar">-->
-            <!--<ul class="nav nav-sidebar">-->
-                <!--<li><a href="../home/home.view.html">Home <span class="sr-only">(current)</span></a></li>-->
-                <!--<li><a href="profile.view.html">profile</a></li>-->
-                <!--<li><a href="../admin/admin.view.html">Admin</a></li>-->
-                <!--<li><a href="../forms/forms.view.html">Forms</a></li>-->
-            <!--</ul>-->
-        <!--</div>-->
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Login</h1>
             <form class="form-horizontal">
                 <div class="form-group">
                     <label for="username" class="col-sm-2">Username:</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="username" placeholder="Username">
+                        <input type="text" ng-model="user.username" class="form-control" id="username" placeholder="Username">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="password" class="col-sm-2">Password:</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="password" placeholder="Password">
+                        <input type="password" ng-model="user.password" class="form-control" id="password" placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <a href="profile.view.html" class="btn btn-primary btn-block">Login</a>
-                        <!--<button type="submit" class="btn btn-default btn-block">Login</button>-->
+                        <a ng-click="login(user)" class="btn btn-primary btn-block">Login</a>
                     </div>
 
                 </div>
@@ -82,15 +25,3 @@
         </div>
     </div>
 </div>
-
-
-<!--&lt;!&ndash; FOOTER SECTION - Before closing </body> tag &ndash;&gt;-->
-
-<!--&lt;!&ndash; jQuery &ndash;&gt;-->
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
-
-<!--&lt;!&ndash; Minified JavaScript &ndash;&gt;-->
-<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>-->
-<!--<script src = "../../js/script.js"></script>-->
-<!--</body>-->
-<!--</html>-->
