--- a/public/assignment/views/forms/forms.view.html
+++ b/public/assignment/views/forms/forms.view.html
@@ -31,10 +31,10 @@
                     <tr ng-repeat="form in forms">
                         <td>{{form.title}}</td>
                             <td>
-                                <a ng-click="deleteForm()">
+                                <a ng-click="deleteForm($index)">
                                     <span class="edit-icon-lt glyphicon glyphicon-remove" aria-hidden="true"></span>
                                 </a>
-                                <a ng-click="selectForm()">
+                                <a ng-click="selectForm($index)">
                                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                 </a>
                             </td>
