--- a/public/assignment/views/users/profile.view.html
+++ b/public/assignment/views/users/profile.view.html
@@ -31,7 +31,7 @@
                 <div class="form-group">
                     <label for="email" class="col-sm-2">Email:</label>
                     <div class="col-sm-10">
-                        <input type="text" ng-model="user.emailId" class="form-control" id="email" placeholder="Email">
+                        <input type="email" ng-model="user.emailId" class="form-control" id="email" placeholder="Email">
                     </div>
                 </div>
                 <div class="form-group">
