--- a/public/assignment/views/users/profile.view.html
+++ b/public/assignment/views/users/profile.view.html
@@ -7,7 +7,7 @@
                 <div class="form-group">
                     <label for="username" class="col-sm-2">Username:</label>
                     <div class="col-sm-10">
-                        <input type="text" ng-model="user.username" class="form-control" id="username" placeholder="Username">
+                        <input type="text" ng-model="user.username" class="form-control" id="username" placeholder="Username" ng-readonly="readonly">
                     </div>
                 </div>
                 <div class="form-group">
