--- a/public/assignment/views/header/header.view.html
+++ b/public/assignment/views/header/header.view.html
@@ -16,8 +16,8 @@
                     ng-class="{'active': location.url() == '/register'}"><a href="#/register">Register</a></li>
                 <li ng-hide="location.url() == '/profile' || location.url() == '/forms' || location.url() == '/admin'"
                     ng-class="{'active': location.url() == '/login'}"><a href="#/login">Login</a></li>
-                <li ng-hide="location.url() == '/home'"><a href="#">Username</a></li>
-                <li ng-hide="location.url() == '/home'"><a href="#">Logout</a></li>
+                <li ng-hide="location.url() == '/home'"><a href="#/">Username</a></li>
+                <li ng-hide="location.url() == '/home'"><a href="#/">Logout</a></li>
                 <li class="visible-xs" ng-class="{'active': location.url() == '/home'}">
                     <a href="#/home">Home <span class="sr-only">(current)</span></a></li>
                 <li class="visible-xs" ng-class="{'active': location.url() == '/profile'}">
