--- a/public/assignment/views/header/header.view.html
+++ b/public/assignment/views/header/header.view.html
@@ -12,19 +12,40 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li ng-hide="location.url() == '/profile' || location.url() == '/forms' || location.url() == '/admin'"
-                    ng-class="{'active': location.url() == '/register'}"><a href="#/register">Register</a></li>
-                <li ng-hide="location.url() == '/profile' || location.url() == '/forms' || location.url() == '/admin'"
-                    ng-class="{'active': location.url() == '/login'}"><a href="#/login">Login</a></li>
-                <li ng-hide="location.url() == '/home'"><a href="#/">Username</a></li>
-                <li ng-hide="location.url() == '/home'"><a href="#/">Logout</a></li>
-                <li class="visible-xs" ng-class="{'active': location.url() == '/home'}">
-                    <a href="#/home">Home <span class="sr-only">(current)</span></a></li>
-                <li class="visible-xs" ng-class="{'active': location.url() == '/profile'}">
-                    <a href="#/profile">profile</a></li>
-                <li class="visible-xs" ng-class="{'active': location.url() == '/admin'}">
-                    <a href="#/admin">Admin</a></li>
-                <li class="visible-xs"><a href="#/forms">Forms</a></li>
+                <li ng-hide="user"
+                    ng-class="{'active': location.url() == '/register'}">
+                    <a href="#/register">Register</a>
+                </li>
+                <li ng-hide="user"
+                    ng-class="{'active': location.url() == '/login'}">
+                    <a href="#/login">Login</a>
+                </li>
+                <li ng-show="user">
+                    <a href="#/profile">{{user.username}}</a>
+                </li>
+                <li ng-hide="!user"
+                    ng-click="logOut()">
+                    <a>Logout</a>
+                </li>
+                <li ng-class="{'active': location.url() == '/home'}"
+                    class="visible-xs">
+                    <a href="#/home">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li ng-show="user"
+                    ng-class="{'active': location.url() == '/profile'}"
+                    class="visible-xs">
+                    <a href="#/profile">Profile</a>
+                </li>
+                <li ng-show="user"
+                    ng-class="{'active': location.url() == '/admin'}"
+                    class="visible-xs">
+                    <a href="#/admin">Admin</a>
+                </li>
+                <li ng-show="user"
+                    ng-class="{'active': location.url() == '/forms'}"
+                    class="visible-xs">
+                    <a href="#/forms">Forms</a>
+                </li>
             </ul>
         </div>
     </div>
