fixed bugs in assignment 2 and worked on POC

--- a/public/assignment/views/header/header.view.html
+++ b/public/assignment/views/header/header.view.html
@@ -36,7 +36,7 @@
                     class="visible-xs">
                     <a href="#/profile">Profile</a>
                 </li>
-                <li ng-show="user"
+                <li ng-show="user.roles.indexOf('admin') >= 0"
                     ng-class="{'active': location.url() == '/admin'}"
                     class="visible-xs">
                     <a href="#/admin">Admin</a>
