--- a/public/project-angular/css/style.css
+++ b/public/project-angular/css/style.css
@@ -15,6 +15,20 @@ body {
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
+#slides_control > div{
+    height: 200px;
+}
+img{
+    margin:auto;
+    width: 400px;
+}
+#slides_control {
+    position:absolute;
+    width: 400px;
+    left:50%;
+    top:20px;
+    margin-left:-200px;
+}
 
 .carousel {
     margin-bottom: 60px;
