--- a/public/assignment/views/users/login.view.html
+++ b/public/assignment/views/users/login.view.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <a ng-click="login(user)" class="btn btn-primary btn-block">Login</a>
+                        <a ng-click="login(user)" href="" class="btn btn-primary btn-block">Login</a>
                     </div>
 
                 </div>
