--- a/public/project-angular/views/home/home.view.html
+++ b/public/project-angular/views/home/home.view.html
@@ -11,7 +11,7 @@
                         <input ng-model="loc" class="form-control margin-searchbox" placeholder="Boston"/>
                     </div>
                     <div class="col-sm-3 col-md-3">
-                        <button ng-click="search(restname,loc)" class="btn btn-primary btn-block">Find Food</button>
+                        <button ng-click="callSearch(restname,loc)" class="btn btn-primary btn-block">Find Food</button>
                     </div>
 
                 </div>
