created user services and user signup and login functinality for POC

--- a/public/project-angular/css/style.css
+++ b/public/project-angular/css/style.css
@@ -67,7 +67,7 @@ body {
     top: 200px;
     z-index: 1
 }
-.container-fluid {
+.container-fluid-carousel {
     padding-left: 0px;
     padding-right: 0px;
 }
