--- a/public/project-angular/views/home/home.view.html
+++ b/public/project-angular/views/home/home.view.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" ng-controller="HomeController">
+<div class="container-fluid-carousel" ng-controller="HomeController">
     <!-- Carousel================================================== -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
