--- a/public/project-angular/views/users/login.view.html
+++ b/public/project-angular/views/users/login.view.html
@@ -7,7 +7,9 @@
                     <!--<label for="username" class="col-sm-2">Username:</label>-->
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="input-group">
-                            <input type="text" class="form-control" id="username" placeholder="Username">
+                            <input ng-model="user.username" type="text"
+                                   class="form-control" id="username"
+                                   placeholder="Username">
                             <span class="input-group-addon">
                             <i class="glyphicon glyphicon-user"></i>
                             </span>
@@ -19,7 +21,8 @@
                     <!--<label for="password" class="col-sm-2">Password:</label>-->
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="input-group">
-                            <input type="password" class="form-control" id="password" placeholder="Password">
+                            <input ng-model="user.password" type="password"
+                                   class="form-control" id="password" placeholder="Password">
                             <span class="input-group-addon">
                                 <i class="glyphicon glyphicon-lock"></i>
                             </span>
@@ -29,7 +32,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-1 col-sm-10">
-                        <a href="#" class="btn btn-success btn-block top-margin">Login</a>
+                        <a ng-click="login(user)" href="" class="btn btn-success btn-block top-margin">Login</a>
                         <!--<button type="submit" class="btn btn-default btn-block">Login</button>-->
                     </div>
                 </div>
