--- a/public/project-angular/views/users/register.view.html
+++ b/public/project-angular/views/users/register.view.html
@@ -8,7 +8,8 @@
                     <!--<label for="username" class="col-sm-2">Username:</label>-->
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="input-group">
-                            <input type="text" class="form-control" id="firstname" placeholder="First name">
+                            <input ng-model="user.firstname" type="text"
+                                   class="form-control" placeholder="First name">
                             <span class="input-group-addon">
                             <i class="glyphicon glyphicon-user"></i>
                             </span>
@@ -20,7 +21,8 @@
                 <div class="form-group">
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="input-group">
-                            <input type="text" class="form-control" id="lastname" placeholder="Last name">
+                            <input ng-model="user.lastname" type="text"
+                                   class="form-control"  placeholder="Last name">
                                 <span class="input-group-addon">
                                 <i class="glyphicon glyphicon-user"></i>
                                 </span>
@@ -30,7 +32,8 @@
                 <div class="form-group">
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="input-group">
-                            <input type="text" class="form-control" id="email" placeholder="Email">
+                            <input ng-model="user.email "type="email"
+                                   class="form-control" placeholder="Email">
                                 <span class="input-group-addon">
                                 <i class="glyphicon glyphicon-envelope"></i>
                                 </span>
@@ -40,7 +43,8 @@
                 <div class="form-group">
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="input-group">
-                            <input type="text" class="form-control" id="city" placeholder="City, State">
+                            <input ng-model="user.city" type="text"
+                                   class="form-control" placeholder="City">
                                 <span class="input-group-addon">
                                 <i class="glyphicon glyphicon-map-marker"></i>
                                 </span>
@@ -48,10 +52,10 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <!--<label for="password" class="col-sm-2">Password:</label>-->
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="input-group">
-                            <input type="text" class="form-control" id="username" placeholder="Username">
+                            <input ng-model="user.username" type="text"
+                                   class="form-control" placeholder="Username">
                             <span class="input-group-addon">
                             <i class="glyphicon glyphicon-user"></i>
                             </span>
@@ -59,10 +63,10 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <!--<label for="password" class="col-sm-2">Password:</label>-->
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="input-group">
-                            <input type="password" class="form-control" id="password" placeholder="Password">
+                            <input ng-model="user.password" type="password"
+                                   class="form-control" id="password" placeholder="Password">
                             <span class="input-group-addon">
                                 <i class="glyphicon glyphicon-lock"></i>
                             </span>
@@ -70,10 +74,10 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <!--<label for="password" class="col-sm-2">Password:</label>-->
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="input-group">
-                            <input type="password" class="form-control" id="vpassword" placeholder="Verify Password">
+                            <input ng-model="user.vpassword" type="password"
+                                   class="form-control" id="vpassword" placeholder="Verify Password">
                             <span class="input-group-addon">
                                 <i class="glyphicon glyphicon-lock"></i>
                             </span>
@@ -82,8 +86,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-1 col-sm-10">
-                        <a href="#" class="btn btn-success btn-block">Sign Up</a>
-                        <!--<button type="submit" class="btn btn-default btn-block">Login</button>-->
+                        <a ng-click="register(user)" href="" class="btn btn-success btn-block">Sign Up</a>
                     </div>
                 </div>
                 <div class="form-group">
