Designed search details page and minor bug fixes

--- a/public/project-angular/css/style.css
+++ b/public/project-angular/css/style.css
@@ -147,6 +147,18 @@ footer {
 .margin-bottom-zero{
     margin-bottom: 0;
 }
+
+.tmargin{
+    margin-top: 1px;
+}
+
+.margin-panel{
+    margin-top: 20px;
+}
+.margin-well{
+    margin-left : 15px;
+    margin-right:15px;
+}
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
