--- a/public/project-angular/views/home/home.view.html
+++ b/public/project-angular/views/home/home.view.html
@@ -25,14 +25,14 @@
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="http://lorempixel.com/1500/800/food/2/" alt="" class="img-carousel">
+                <img src="http://lorempixel.com/1500/800/food/2/" alt="" class="img-carousel img-responsive">
                 <div class="container">
                     <div class="carousel-caption">
                     </div>
                 </div>
             </div>
             <div class="item">
-                <img src="http://lorempixel.com/1500/800/food/3/" class="img-carousel">
+                <img src="http://lorempixel.com/1500/800/food/3/" class="img-carousel img-responsive">
                 <div class="container">
                     <div class="carousel-caption">
 
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="http://lorempixel.com/1500/800/food/4/" class="img-carousel">
+                <img src="http://lorempixel.com/1500/800/food/4/" class="img-carousel img-responsive">
                 <div class="container">
                     <div class="carousel-caption">
 
@@ -73,13 +73,13 @@
 <!-- /.carousel -->
 <div class="container">
     <div class="row">
-        <div class="col-lg-12">
-            <h3 class="page-header">Browse by popular cuisine</h3>
+        <div class="col-lg-12 text-center home-pad">
+            <h3 class="page-header lead">Browse by popular cuisine</h3>
         </div>
 
         <div class="col-sm-3 col-xs-6 img-hover">
             <a href="#">
-                <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <img class="img-responsive portfolio-item" src="http://lorempixel.com/500/300/food/1/" alt="">
                 <div class="carousel-caption">
                     <h4>Thai</h4>
                 </div>
@@ -88,16 +88,16 @@
 
         <div class="col-sm-3 col-xs-6 img-hover">
             <a href="#">
-                <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <img class="img-responsive portfolio-item" src="http://lorempixel.com/500/300/food/8/" alt="">
                 <div class="carousel-caption">
-                    <h4>Chinese</h4>
+                    <h4 class="txtcolor">Chinese</h4>
                 </div>
             </a>
         </div>
 
         <div class="col-sm-3 col-xs-6 img-hover">
             <a href="#">
-                <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <img class="img-responsive portfolio-item" src="http://lorempixel.com/500/300/food/3/" alt="">
                 <div class="carousel-caption">
                     <h4>Mexican</h4>
                 </div>
@@ -106,7 +106,7 @@
 
         <div class="col-sm-3 col-xs-6 img-hover">
             <a href="#">
-                <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <img class="img-responsive portfolio-item" src="http://lorempixel.com/500/300/food/5/" alt="">
                 <div class="carousel-caption">
                     <h4>Indian</h4>
                 </div>
@@ -120,13 +120,13 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-lg-12 img-hover">
-            <h3 class="page-header">Browse by famous location</h3>
+        <div class="col-lg-12 text-center home-pad">
+            <h3 class="page-header lead">Browse by famous location</h3>
         </div>
 
         <div class="col-sm-3 col-xs-6 img-hover">
             <a href="#">
-                <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <img class="img-responsive portfolio-item" src="http://lorempixel.com/500/300/city/9/" alt="">
                 <div class="carousel-caption">
                     <h4>San Fransisco</h4>
                 </div>
@@ -135,7 +135,7 @@
 
         <div class="col-sm-3 col-xs-6 img-hover">
             <a href="#">
-                <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <img class="img-responsive portfolio-item" src="http://lorempixel.com/500/300/city/3/" alt="">
                 <div class="carousel-caption">
                     <h4>New York</h4>
                 </div>
@@ -144,16 +144,16 @@
 
         <div class="col-sm-3 col-xs-6 img-hover">
             <a href="#">
-                <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <img class="img-responsive portfolio-item" src="http://lorempixel.com/500/300/city/2/" alt="">
                 <div class="carousel-caption">
-                    <h4>Las Angeles</h4>
+                    <h4>Los Angeles</h4>
                 </div>
             </a>
         </div>
 
         <div class="col-sm-3 col-xs-6 img-hover">
             <a href="#">
-                <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                <img class="img-responsive portfolio-item" src="http://lorempixel.com/500/300/city/4/" alt="">
                 <div class="carousel-caption">
                     <h4>Chicago</h4>
                 </div>
