fixed image error on carousel homa page

--- a/public/project-angular/views/home/home.view.html
+++ b/public/project-angular/views/home/home.view.html
@@ -25,14 +25,14 @@
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="http://lorempixel.com/1500/800/food/2/" alt="" class="img-carousel img-responsive">
+                <img src="/project-angular/images/pizza.jpg" alt="" class="img-carousel img-responsive center-block">
                 <div class="container">
                     <div class="carousel-caption">
                     </div>
                 </div>
             </div>
             <div class="item">
-                <img src="http://lorempixel.com/1500/800/food/3/" class="img-carousel img-responsive">
+                <img src="http://lorempixel.com/1500/800/food/3/" class="img-carousel img-responsive center-block">
                 <div class="container">
                     <div class="carousel-caption">
 
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="item">
-                <img src="http://lorempixel.com/1500/800/food/4/" class="img-carousel img-responsive">
+                <img src="http://lorempixel.com/1500/800/food/4/" class="img-carousel img-responsive center-block">
                 <div class="container">
                     <div class="carousel-caption">
 
