--- a/public/project-angular/css/style.css
+++ b/public/project-angular/css/style.css
@@ -47,6 +47,7 @@ body {
     height: 500px;
     background-color:#bbb;
     overflow:hidden;
+    max-width: 100%;
 }
 .carousel .img-carousel {
     position: absolute;
@@ -55,6 +56,9 @@ body {
     min-width: 100%;
     height: 500px;
 }
+/*.carousel-inner img {*/
+    /*margin: auto;*/
+/*}*/
 
 #searchForm {
     position:absolute;
@@ -191,6 +195,7 @@ footer {
 
     .carousel-inner>.item>.img-carousel, .carousel-inner>.item>a>.img-carousel {
         max-width:inherit;
+        height: 500px;
     }
 
     .carousel-caption p {
@@ -241,5 +246,9 @@ footer {
 }
 
 @media only screen and (min-width: 767px) and (max-width: 992px) {
+    .carousel-inner>.item>.img-carousel, .carousel-inner>.item>a>.img-carousel {
+        max-width:inherit;
+        height: 500px;
+    }
 
 }
