Done with Yelp API functionality

--- a/public/project-angular/views/home/home.view.html
+++ b/public/project-angular/views/home/home.view.html
@@ -78,7 +78,7 @@
         </div>
 
         <div class="col-sm-3 col-xs-6 img-hover">
-            <a href="#">
+            <a href="#/search/restname=Thai&location=Boston">
                 <img class="img-responsive portfolio-item" src="http://lorempixel.com/500/300/food/1/" alt="">
                 <div class="carousel-caption">
                     <h4>Thai</h4>
@@ -87,7 +87,7 @@
         </div>
 
         <div class="col-sm-3 col-xs-6 img-hover">
-            <a href="#">
+            <a href="#/search/restname=Chinese&location=Boston">
                 <img class="img-responsive portfolio-item" src="http://lorempixel.com/500/300/food/8/" alt="">
                 <div class="carousel-caption">
                     <h4 class="txtcolor">Chinese</h4>
@@ -96,7 +96,7 @@
         </div>
 
         <div class="col-sm-3 col-xs-6 img-hover">
-            <a href="#">
+            <a href="#/search/restname=Mexican&location=Boston">
                 <img class="img-responsive portfolio-item" src="http://lorempixel.com/500/300/food/3/" alt="">
                 <div class="carousel-caption">
                     <h4>Mexican</h4>
@@ -105,7 +105,7 @@
         </div>
 
         <div class="col-sm-3 col-xs-6 img-hover">
-            <a href="#">
+            <a href="#/search/restname=Indian&location=Boston">
                 <img class="img-responsive portfolio-item" src="http://lorempixel.com/500/300/food/5/" alt="">
                 <div class="carousel-caption">
                     <h4>Indian</h4>
@@ -125,7 +125,7 @@
         </div>
 
         <div class="col-sm-3 col-xs-6 img-hover">
-            <a href="#">
+            <a href="#/search/location=San Fransisco">
                 <img class="img-responsive portfolio-item" src="http://lorempixel.com/500/300/city/9/" alt="">
                 <div class="carousel-caption">
                     <h4>San Fransisco</h4>
@@ -134,7 +134,7 @@
         </div>
 
         <div class="col-sm-3 col-xs-6 img-hover">
-            <a href="#">
+            <a href="#/search/location=New York">
                 <img class="img-responsive portfolio-item" src="http://lorempixel.com/500/300/city/3/" alt="">
                 <div class="carousel-caption">
                     <h4>New York</h4>
@@ -143,7 +143,7 @@
         </div>
 
         <div class="col-sm-3 col-xs-6 img-hover">
-            <a href="#">
+            <a href="#/search/location=Los Angeles">
                 <img class="img-responsive portfolio-item" src="http://lorempixel.com/500/300/city/2/" alt="">
                 <div class="carousel-caption">
                     <h4>Los Angeles</h4>
@@ -152,7 +152,7 @@
         </div>
 
         <div class="col-sm-3 col-xs-6 img-hover">
-            <a href="#">
+            <a href="#/search/location=Chicago">
                 <img class="img-responsive portfolio-item" src="http://lorempixel.com/500/300/city/4/" alt="">
                 <div class="carousel-caption">
                     <h4>Chicago</h4>
