Changed the project end point

--- a/public/project/views/home/home.view.html
+++ b/public/project/views/home/home.view.html
@@ -25,7 +25,7 @@
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="/project-angular/images/pizza.jpg" alt="" class="img-carousel img-responsive center-block">
+                <img src="/project/images/pizza.jpg" alt="" class="img-carousel img-responsive center-block">
                 <div class="container">
                     <div class="carousel-caption">
                     </div>
