--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -15,6 +15,21 @@ body {
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
+#slides_control > div{
+    height: 200px;
+}
+
+.img-carousel{
+    margin:auto;
+    width: 400px;
+}
+#slides_control {
+    position:absolute;
+    width: 400px;
+    left:50%;
+    top:20px;
+    margin-left:-200px;
+}
 
 .carousel {
     margin-bottom: 60px;
@@ -32,14 +47,18 @@ body {
     height: 500px;
     background-color:#bbb;
     overflow:hidden;
+    max-width: 100%;
 }
-.carousel img {
+.carousel .img-carousel {
     position: absolute;
     top: 0;
     left: 0;
     min-width: 100%;
     height: 500px;
 }
+/*.carousel-inner img {*/
+    /*margin: auto;*/
+/*}*/
 
 #searchForm {
     position:absolute;
@@ -52,7 +71,7 @@ body {
     top: 200px;
     z-index: 1
 }
-.container-fluid {
+.container-fluid-carousel {
     padding-left: 0px;
     padding-right: 0px;
 }
@@ -124,6 +143,51 @@ footer {
 .margin-lft-searchbox{
     margin-left: -23px;
 }
+
+.pad-left-right{
+    padding-left:5px;
+    padding-right:5px;
+}
+.margin-bottom-zero{
+    margin-bottom: 0;
+}
+
+.tmargin{
+    margin-top: 1px;
+}
+
+.margin-panel{
+    margin-top: 20px;
+}
+.margin-well{
+    margin-left : 15px;
+    margin-right:15px;
+}
+.txtcolor{
+}
+
+.glyphicon.glyphicon-remove {
+    font-size: 20px;
+    color: #d9534f;
+}
+
+.glyphicon.glyphicon-pencil {
+    font-size: 20px;
+    color: #5e5e5e;
+}
+
+.glyphicon.glyphicon-align-justify{
+    font-size: 20px;
+    color: #337ab7;
+}
+
+.glyphicon.glyphicon-plus {
+    font-size: 20px;
+    color: #5cb85c;
+}
+.glyphicon.glyphicon-ok {
+    font-size: 20px;
+}
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
@@ -152,8 +216,9 @@ footer {
 
 @media (max-width: 768px) {
 
-    .carousel-inner>.item>img, .carousel-inner>.item>a>img {
+    .carousel-inner>.item>.img-carousel, .carousel-inner>.item>a>.img-carousel {
         max-width:inherit;
+        height: 500px;
     }
 
     .carousel-caption p {
@@ -197,8 +262,16 @@ footer {
     .col-lg-12 {
         width: 90%;
     }
+
+    .home-pad{
+        padding-left: 160px;
+    }
 }
 
 @media only screen and (min-width: 767px) and (max-width: 992px) {
+    .carousel-inner>.item>.img-carousel, .carousel-inner>.item>a>.img-carousel {
+        max-width:inherit;
+        height: 500px;
+    }
 
 }
